Attempting to fix image issues
cropped images and set width to same in css file

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -86,7 +86,7 @@ header h2 {
 }
 
 .iOS img {
-    width: 170px;
+    width: 200px;
 }
 
 #sec1, h3, h4 {
